--- a/index.html
+++ b/index.html
@@ -978,6 +978,7 @@
     </div>
 </footer>
 <div id="zan-gotop"><i class="fa fa-angle-up"></i></div>
+<div style="display: none"><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5i51tityzb2&amp;m=8&amp;c=ff0000&amp;cr1=ffffff&amp;f=comic_sans_ms&amp;l=33" async="async"></script></div>
 <script type="text/javascript" src="https://beats0.github.io/www.mygalgame.com/js/myblog_bd=1.0.3.js"></script>
 <script type="text/javascript" src="https://beats0.github.io/www.mygalgame.com/js/myblog_min=1.1.1.js"></script>
 <script type="text/javascript">var smiley = jQuery("#smilelink");
