--- a/shizhongjiguandeley-line-chaowuzhongpiaolingzhihua.html
+++ b/shizhongjiguandeley-line-chaowuzhongpiaolingzhihua.html
@@ -24,11 +24,7 @@
           type='text/css' media='all'/>
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://beats0.github.io/www.mygalgame.com/js/fade.js"></script>
-    </script>
-    <
-    script
-    type = 'text/javascript'
-    src = 'https://beats0.github.io/www.mygalgame.com/js/jquery-migrate.min=1.4.1.js' ></script>
+    <script type='text/javascript' src='https://beats0.github.io/www.mygalgame.com/js/jquery-migrate.min=1.4.1.js'></script>
     <script type='text/javascript'
             src='https://beats0.github.io/www.mygalgame.com/js/jquery.cookie.js=17.7.js'></script>
     <script type='text/javascript' src='https://beats0.github.io/www.mygalgame.com/js/script=17.7.js'></script>
