--- a/youhun2-youre-the-only-one.html
+++ b/youhun2-youre-the-only-one.html
@@ -374,7 +374,7 @@
                             </a></div>
                             <div class="panel-footer"><br> <b><span
                                     style="font-size: 10pt;">备注：<span
-                                    style="color: #ff0000;">别想了，这里没有资源，游魂2是对中国玩家的一个支持，请支持正版,谢谢<br><br>
+                                    style="color: #ff0000;">别想了，这里没有资源，请支持正版,谢谢<br><br>
                                 steam购买链接：<br>
                                 http://store.steampowered.com/app/552280/Tayutama2_youre_the_only_one_CHI_ver<br>
                                 官网特典购买：<br>
