--- a/index.html
+++ b/index.html
@@ -745,6 +745,24 @@
                    class="btn btn-inverse-primary pull-right">注册</a></form>
         </div>
     </aside>
+    <aside id="zan_custom-3">
+        <div class="panel panel-zan aos-init aos-animate" aos="fade-up" aos-duration="2000">
+            <div class="panel-heading">近期更新记录</div>
+            <div class="panel-body custom">
+                <br><a href="https://beats0.github.io/www.mygalgame.com/rewrite-2.html">2017-10-29 Rewrite+</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/youhun2-youre-the-only-one.html">2017-10-28 游魂2 -you’re the only one-</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/youhun-its-happy-days.html">2017-10-28 游魂 -It’s happy days-</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/shizhongjiguandeley-line-chaowuzhongpiaolingzhihua.html">2017-10-27 时钟机关的Ley-line -朝雾中飘零之花-</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/shizhongjiguandeley-line-canyingzhiyejiangmingshi.html">2017-10-27 时钟机关的Ley-line -残影之夜将明时--</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/zhanmodasheng.html">2017-10-26 斩魔大圣</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/bubaishijieyuzhongyanzhihua.html">2017-10-17 不败世界与终焉之花</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/qianlianwanhua_full.html">2017-10-15 千恋*万花</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/shaonvlingyu.html">2017-10-13 少女领域</a>
+                <br><a href="https://beats0.github.io/www.mygalgame.com/NEKOPARA_Vol_3.html">2017-10-06 NEKOPARA Vol. 3</a>
+                <br>
+            </div>
+        </div>
+    </aside>
     <aside id="zan_latest_comments-8">
         <div class="panel panel2 panel-zan hidden-xs" aos="fade-up" aos-duration="2000">
             <div class="panel-heading"><i class="fa fa-comments"></i> 最新评论 <i
