--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel='stylesheet' id='mystyle-css' href='https://beats0.github.io/www.mygalgame.com/css/myblog.css'
           type='text/css' media='all'/>
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://beats0.github.io/www.mygalgame.com/js/fade.js"></script>
+    <script src="js/fade.js"></script>
     <script type='text/javascript'
             src='https://beats0.github.io/www.mygalgame.com/js/jquery-migrate.min=1.4.1.js'></script>
     <script type='text/javascript'
