--- a/meijia-meimeixinniang.html
+++ b/meijia-meimeixinniang.html
@@ -321,8 +321,8 @@
                                                      href="https://beats0.github.io/www.mygalgame.com/category/%e6%b1%89%e5%8c%96%e7%a1%ac%e7%9b%98%e7%89%88/%e6%8b%bc%e9%9f%b3%e9%a6%96%e5%ad%97%e6%af%8dip/"
                                                      class="taxonomy category">拼音首字母I~P</a></span> &gt; <span
                             typeof="v:Breadcrumb"><a rel="v:url" property="v:title" title="转到 S 分类存档"
-                                                     href="https://beats0.github.io/www.mygalgame.com/category/%e6%b1%89%e5%8c%96%e7%a1%ac%e7%9b%98%e7%89%88/%e6%8b%bc%e9%9f%b3%e9%a6%96%e5%ad%97%e6%af%8dip/y/"
-                                                     class="taxonomy category">Y</a></span> &gt; <span
+                                                     href="https://beats0.github.io/www.mygalgame.com/category/%e6%b1%89%e5%8c%96%e7%a1%ac%e7%9b%98%e7%89%88/%e6%8b%bc%e9%9f%b3%e9%a6%96%e5%ad%97%e6%af%8dip/m/"
+                                                     class="taxonomy category">M</a></span> &gt; <span
                             typeof="v:Breadcrumb"><span property="v:title">妹嫁 ～妹妹新娘～</span></span>
                     </div> <!-- 面包屑结束 --> <!-- 大型设备文章属性 -->
                     <div class="hidden-xs">
