--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
             class="badge">41</span></a></section> <!-- 小型设备文章属性结束 --></div> </div> <!-- 内容主体结束 --> <!-- 分页 -->
 <div id="zan-page" class="clearfix">
     <ul class="pagination pagination-zan pull-right">
-        <li></li>
+        <li><a href="https://beats0.github.io/www.mygalgame.com/page/N1/">«</a></li>
         <li><a href='https://beats0.github.io/www.mygalgame.com/page/N1/'>N1</a></li>
         <li class='active'><span>1</span></li>
         <li><a href='https://beats0.github.io/www.mygalgame.com/page/2/'>2</a></li>
