--- a/index.html
+++ b/index.html
@@ -98,6 +98,23 @@
     .cb-slideshow li:nth-child(6) span {
         background-image: url(https://ws4.sinaimg.cn/large/005ODKsIgw1fakzmapxyfj31hc0u0jw0.jpg);
     }</style>
+    <style>
+        span.bb_spoiler {
+            color: #000000;
+            background-color: #000000;
+            padding: 0px 8px;
+        }
+        span.bb_spoiler > span {
+            visibility:hidden;
+        }
+        span.bb_spoiler:hover {
+            color: #ffffff;
+            opacity:1;
+        }
+        span.bb_spoiler:hover>span {
+            visibility: visible;
+        }
+    </style>
 </head>
 <body class="home blog" ondragstart="return false">
 <section class="hidden-xs">
@@ -295,11 +312,13 @@
                 <div class="well mybody2">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
                     <b><font color="#FF0000">
+                        <h4 class="text-center">为保证界面运行流畅，建议使用Chrome浏览器浏览</h4>
                         写在前面：<br><br>
                         所有资源99%来自mygalgame.com.但有一些文件我不会发布，比如说现在的游魂2，这就扯到关于galgame的正版与盗版问题以及一些游戏的汉化问题等等，游魂2登录steam，开发中国市场，这对于我们来说理应是相当支持的，可总有人想着：“哇，好贵，买不起，还是玩盗版吧，反正以后有资源。”。抱歉，这种人我非常讨厌，人家好不容易可以支持国区了，辛辛苦苦 开发的游戏凭什么要免费送给你。我只知道做游戏真的不容易，如果你是galgame玩家，真的热爱galgame，就应该对厂商给予一些支持，购入游戏周边（如抱枕、原声集、画集等）也是对游戏厂商的支持。在我眼里，只要买正版就是好事。当然你若只玩盗版，除了说你几句，也拿你没办法，毕竟随着时间推移，网上总会有资源流出。对于一个游戏的流放，小范围的分享就行了，我认为这是个人意愿问题，这也无可厚非。但是之后的资源是否流出，说严重一点就是关于到利益问题了。最后，我只想说有能力的就支持正版，没有能力的自己默默玩就好，也没有戴有色眼镜看待正版玩家或盗版玩家的意思。以后涉及到游戏购买利益问题的我不会发布，只会尽量发布游戏的购买链接。谢谢<br><br>
                         <p style="float: right">————2017.10.28&nbsp;&nbsp;&nbsp;&nbsp;Beats0</p>
                         <br>
                         <br>
+                        <span class="bb_spoiler"><span>恭喜弟弟今天结婚啊————11-12</span></span><br>
                         代码备份仅以学习交流使用,所有代码及资源都归mygalgame网站所有<br>原始网站地址：https://www.mygalgame.com<br>GitHub备用地址：https://beats0.github.io/www.mygalgame.com<br>
                         GitHub repository(可搜索所有游戏名称寻找)：https://github.com/Beats0/www.mygalgame.com<br>
                         </font></b><br><br>
