--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         <p style="float: right">————2017.10.28&nbsp;&nbsp;&nbsp;&nbsp;Beats0</p>
                         <br>
                         <br>
-                        <span class="bb_spoiler"><span>恭喜弟弟今天结婚啊————11-12</span></span><br>
+                        <span class="bb_spoiler"><span>恭喜弟弟结婚啊—</span></span><br>
                         代码备份仅以学习交流使用,所有代码及资源都归mygalgame网站所有<br>原始网站地址：https://www.mygalgame.com<br>GitHub备用地址：https://beats0.github.io/www.mygalgame.com<br>
                         GitHub repository(可搜索所有游戏名称寻找)：https://github.com/Beats0/www.mygalgame.com<br>
                         </font></b><br><br>
