--- a/index.html
+++ b/index.html
@@ -139,5 +139,20 @@
         });
     });
 </script>
+<script>var _hmt = _hmt || [];
+(function () {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?03707b9d88054c7fe2eb2f69bc297935";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s)
+})();</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108088946-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-108088946-1');
+</script>
+
 </body>
 </html>
