--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="circle" id="gal">
         <div class="ring">
             <a href="https://beats0.github.io/www.mygalgame.com" title="首页" class="menuItem">首页</a>
-            <a href="https://www.mygalgame.com/page/1/" target="_blank" title=""
+            <a href="https://beats0.github.io/www.mygalgame.com/page/1/" target="_blank" title=""
                class="menuItem">下一页</a>
             <a href="https://beats0.github.io/www.mygalgame.com/message.html" target="_blank" title="" class="menuItem">留言版</a>
             <a href="https://beats0.github.io/www.mygalgame.com/?orderby=views" target="_blank" title=""
@@ -107,15 +107,15 @@
     <div class="footer-page-link col-md-2">
         <div class="zan-page clearfix">
             <ul class="pagination pagination-zan">
-                <li><a href="https://www.mygalgame.com/page/1/">1</a></li>
-                <li><a href="https://www.mygalgame.com/page/2/">2</a></li>
-                <li><a href="https://www.mygalgame.com/page/3/">3</a></li>
-                <li><a href="https://www.mygalgame.com/page/4/">4</a></li>
-                <li><a href="https://www.mygalgame.com/page/5/">5</a></li>
-                <li><a href="https://www.mygalgame.com/page/6/">6</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/1/">1</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/2/">2</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/3/">3</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/4/">4</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/5/">5</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/6/">6</a></li>
                 <li><span>...</span></li>
-                <li><a href="https://www.mygalgame.com/page/72/">72</a></li>
-                <li><a href="https://www.mygalgame.com/page/2/">»</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/72/">72</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/2/">»</a></li>
             </ul>
         </div>
     </div>
@@ -153,6 +153,5 @@
     gtag('js', new Date());
     gtag('config', 'UA-108088946-1');
 </script>
-
 </body>
 </html>
