--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <div class="footer-page-link col-md-2 pull-left">
         <div class="zan-page clearfix">
             <ul class="pagination pagination-zan">
+                <li><a href="https://beats0.github.io/www.mygalgame.com/llss_resource_list.html" target="_blank" class="hidden-xs">琉璃神社</a></li>
                 <li><a href="https://beats0.github.io/www.mygalgame.com/page/N1/" target="_blank" class="hidden-xs">N1</a></li>
                 <li><a href="https://beats0.github.io/www.mygalgame.com/page/N2/" target="_blank" class="hidden-xs">N2</a></li>
             </ul>
