--- a/NEKOPARA_Vol_3.html
+++ b/NEKOPARA_Vol_3.html
@@ -23,7 +23,7 @@
     <link rel='stylesheet' id='mystyle-css' href='https://beats0.github.io/www.mygalgame.com/css/myblog.css'
           type='text/css' media='all'/>
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://beats0.github.io/www.mygalgame.com/js/fade.js"></script></script>
+<script src="https://beats0.github.io/www.mygalgame.com/js/fade.js"></script>
     <script type='text/javascript'
             src='https://beats0.github.io/www.mygalgame.com/js/jquery-migrate.min=1.4.1.js'></script>
     <script type='text/javascript'
@@ -306,7 +306,6 @@
         </div>
     </div>
 </header>
-</body>
 <div id="zan-bodyer">
     <div class="container">
         <div class="row">
@@ -1649,5 +1648,5 @@ function grin(a) {
         b.focus()
     }
 }</script>
-</body></html></body></html>
+</body></html>
 <!--压缩前: 107406 bytes; 压缩后: 99179 bytes; 已压缩：7.66% by 忧郁的弟弟-->
