--- a/huaworkspring.html
+++ b/huaworkspring.html
@@ -383,7 +383,7 @@
                             <div class="panel-heading"> 百度网盘链接</div>
                             <div class="panel-body"><a class="hint--right" data-hint="下载前请务必看一下新人必读和解压必读">
                                 <button type="button" class="btn btn-danger"
-                                        onclick="window.open('http://www.mygalgame.com/go.php?url=http://pan.baidu.com/s/1qXKraCs')">
+                                        onclick="window.open('http://pan.baidu.com/s/1snfujDF')">
                                     <font color=#ffffff>链接</font></button>
                             </a></div>
                             <div class="panel-footer"><b><span style="font-size: 10pt;">提取密码：<span
