--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                 <li><a href="https://beats0.github.io/www.mygalgame.com/Game_list/mygalgameList.html" target="_blank" class="hidden-xs">Mygalgame List</a></li>
                 <li><a href="https://beats0.github.io/www.mygalgame.com/page/N1/" target="_blank" class="hidden-xs">N1</a></li>
                 <li><a href="https://beats0.github.io/www.mygalgame.com/page/N2/" target="_blank" class="hidden-xs">N2</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/N3/" target="_blank" class="hidden-xs">N3</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/N4/" target="_blank" class="hidden-xs">N4</a></li>
             </ul>
         </div>
     </div>
