--- a/templatesUpdate_index.html
+++ b/templatesUpdate_index.html
@@ -95,7 +95,7 @@
                     git_url:'',
                     addr:'',
                     pwd:'',
-                    pwd2:'',
+                    pwd2:'忧郁的弟弟',
                     note:'',
                     tag:'',
                     page_footer:'',
