--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="https://beats0.github.io/www.mygalgame.com/css/style.css">
     <link rel="stylesheet" href="https://beats0.github.io/www.mygalgame.com/css/myblog.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://jancgk.github.io/Background/css/fade.css">
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://jancgk.github.io/Background/js/GalMenu.js"></script>
-    <script src="https://jancgk.github.io/Background/js/GalH.js"></script>
-    <script src="https://cdn.bootcss.com/aplayer/1.6.0/APlayer.min.js"></script>
+    <script src="https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.js"></script>
     <script src="https://jancgk.github.io/Background/js/hideseek.min.js"></script>
 </head>
 <body class="home blog logged-in" ondragstart="return false">
@@ -42,13 +41,6 @@
         <audio id="audio" src="https://www.hacg.me/mp3/onj001.mp3"></audio>
     </div>
 </div>
-<script type="text/javascript">
-    var items = document.querySelectorAll('.menuItem');
-    for (var i = 0, l = items.length; i < l; i++) {
-        items[i].style.left = (50 - 35 * Math.cos(-0.5 * Math.PI - 2 * (1 / l) * i * Math.PI)).toFixed(4) + "%";
-        items[i].style.top = (50 + 35 * Math.sin(-0.5 * Math.PI - 2 * (1 / l) * i * Math.PI)).toFixed(4) + "%"
-    }
-</script>
 <div id="overlay" class="magnify">
     <div class="large h_img"></div>
     <img class="small" src="https://beats0.github.io/www.mygalgame.com/images/rpic.png" width="1920">
@@ -58,27 +50,28 @@
         <div class="row">
             <div class="player_show">
                 <div class="play">
-                    <div class="aplayer" id="aplayer5"></div>
-                    <script>
-                        $(function () {
-                            $.ajax({
-                                /**Galgame music playlist by PurionPurion http://music.163.com/#/playlist?id=878498021**/
-                                url: 'https://api.i-meto.com/meting/api?server=netease&type=playlist&id=879840820',
-                                success: function (list) {
-                                    var ap = new APlayer({
-                                        element: document.getElementById('aplayer5'),
-                                        showlrc: 3,
-                                        theme: '#ff69b4',
-                                        listmaxheight: '280px',
-                                        mode: 'random',
-                                        music: JSON.parse(list)
-                                    });
-                                    window.aplayers || (window.aplayers = []);
-                                    window.aplayers.push(ap);
-                                }
+                    <div id="aplayer">
+                        <script>
+                            $(function () {
+                                $.ajax({
+                                    url: 'https://api.i-meto.com/meting/api?server=netease&type=playlist&id=879840820',
+                                    success: function (list) {
+                                        var ap = new APlayer({
+                                            container: document.getElementById('aplayer'),
+                                            mini: false,
+                                            mutex: true,
+                                            listMaxHeight: '280px',
+                                            lrcType: 3,
+                                            theme: '#ff69b4',
+                                            order: 'random',
+                                            listFolded:true,
+                                            audio: JSON.parse(list)
+                                        })
+                                    }
+                                })
                             })
-                        })
-                    </script>
+                        </script>
+                    </div>
                 </div>
             </div>
         </div>
@@ -129,38 +122,9 @@
         </div>
     </div>
 </footer>
+<script type="text/javascript" src="https://jancgk.github.io/Background/js/Gal.min.js"></script>
 <script type="text/javascript" src="https://beats0.github.io/www.mygalgame.com/js/fade.js"></script>
-<script>console.log("%c", "padding:150px 300px;line-height:500px;background:url('https://ws1.sinaimg.cn/large/006nOlwNgy1fktngl8rdnj3090090myp.jpg') no-repeat;");</script>
-<script>
-    $(document).ready(function () {
-        $('body').GalMenu({
-            'menu': 'GalDropDown'
-        });
-        var resource_list = "https://beats0.github.io/www.mygalgame.com/Game_list/mygalgameList.json";
-        $.getJSON(resource_list, function (data, status) {
-            if (status) {
-                console.log(status);
-                for (let i = 0; i < data.length; i++) {
-                    $("#search-item").append("<li><a href='" + data[i].git_url + "'target=\"_blank\">" + data[i].title + "</a></li>")
-                }
-            } else {
-                console.log("400: Invalid request" + status);
-            }
-        });
-        $('#search-highlight').hideseek({
-            highlight: true
-        });
-        /**兼容问题？emmmmm**/
-        setTimeout(function () {
-            $(".aplayer-list").addClass("aplayer-list-hide").children().css("text-align", "left");
-        }, 3000);
-        $('.hero__scroll').on('click', function (e) {
-            $('html, body').animate({
-                scrollTop: $(window).height()
-            }, 1200);
-        });
-    });
-</script>
+<script>console.log("%c","padding:150px 300px;line-height:500px;background:url('https://ws1.sinaimg.cn/large/006nOlwNgy1fktngl8rdnj3090090myp.jpg') no-repeat;");$(document).ready(function(){$('body').GalMenu({'menu':'GalDropDown'});var resource_list="https://beats0.github.io/www.mygalgame.com/Game_list/mygalgameList.json";$.getJSON(resource_list,function(data,status){if(status){for(let i=0;i<data.length;i++){$("#search-item").append("<li><a href='"+data[i].git_url+"'target=\"_blank\">"+data[i].title+"</a></li>")}}else{console.log("400: Invalid request"+status)}});$('#search-highlight').hideseek({highlight:true});setTimeout(function(){$(".aplayer-list").addClass("aplayer-list-hide").children().css("text-align","left")},3000);$('.hero__scroll').on('click',function(e){$('html, body').animate({scrollTop:$(window).height()},1200)})});</script>
 <script>var _hmt = _hmt || []; (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?03707b9d88054c7fe2eb2f69bc297935"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s)})();</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108088946-1"></script><script>window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-108088946-1');</script>
 </body>
