--- a/llss_resource_list.html
+++ b/llss_resource_list.html
@@ -66,7 +66,7 @@
     <div class="row"></div>
 </footer>
 <script type="text/javascript" src="https://beats0.github.io/www.mygalgame.com/js/fade.js"></script>
-<script>console.log("%c", "padding:150px 300px;line-height:500px;background:url('https://ws1.sinaimg.cn/large/006nOlwNgy1fktngl8rdnj3090090myp.jpg') no-repeat;");</script>
+<script>console.log('%c       ', 'font-size: 150px; background: url(https://ws1.sinaimg.cn/large/006nOlwNgy1fktngl8rdnj3090090myp.jpg) no-repeat;');</script>
 <script>
     $(document).ready(function () {
         var resource_list = "https://raw.githubusercontent.com/Chion82/hello-old-driver/master/resource_list.json";
