--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="footer-site">
         <a href="https://www.mygalgame.com/" target="_blank"><i class="fa fa-home"></i><span class="hidden-xs"> Mygalgame | </span></a>
         <a href="https://beats0.github.io/www.mygalgame.com/" target="_blank"><i class="fa fa-link"></i><span class="hidden-xs"> Mygalgame backup | </span></a>
-        <a href="https://www.mygalgame.com/donate.html" target="_blank"><i class="fa fa-dollar"></i><span class="hidden-xs"> Donate Mygalgame &copy;</span></a>
+        <a href="https://www.mmgal.com/donate.html" target="_blank"><i class="fa fa-dollar"></i><span class="hidden-xs"> Donate Mygalgame &copy;</span></a>
     </div>
     <div class="footer-page-link col-md-2 pull-left">
         <div class="zan-page clearfix">
