--- a/Game_list/mygalgameList.html
+++ b/Game_list/mygalgameList.html
@@ -68,7 +68,7 @@
     <div class="row"></div>
 </footer>
 <script type="text/javascript" src="https://beats0.github.io/www.mygalgame.com/js/fade.js"></script>
-<script>console.log('%c       ', 'font-size: 150px; background: url(https://ws1.sinaimg.cn/large/006nOlwNgy1fktngl8rdnj3090090myp.jpg) no-repeat;');</script>
+<script>console.log('%c       ', 'font-size: 150px; background: url(https://wx1.sinaimg.cn/large/006nOlwNgy1fktngl8rdnj3090090myp.jpg) no-repeat;');</script>
 <script>
     $(document).ready(function () {
         var resource_list = "https://beats0.github.io/www.mygalgame.com/Game_list/mygalgameList.json";
