--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <li><a href="https://beats0.github.io/www.mygalgame.com/page/N2/" target="_blank" class="hidden-xs">N2</a></li>
                 <li><a href="https://beats0.github.io/www.mygalgame.com/page/N3/" target="_blank" class="hidden-xs">N3</a></li>
                 <li><a href="https://beats0.github.io/www.mygalgame.com/" target="_blank" class="hidden-xs">...</a></li>
-                <li><a href="https://beats0.github.io/www.mygalgame.com/page/N18/" target="_blank" class="hidden-xs">N18</a></li>
+                <li><a href="https://beats0.github.io/www.mygalgame.com/page/N19/" target="_blank" class="hidden-xs">N19</a></li>
             </ul>
         </div>
     </div>
@@ -124,7 +124,7 @@
 </footer>
 <script type="text/javascript" src="https://jancgk.github.io/Background/js/Gal.min.js"></script>
 <script type="text/javascript" src="https://beats0.github.io/www.mygalgame.com/js/fade.js"></script>
-<script>console.log('%c       ', 'font-size: 150px; background: url(https://ws1.sinaimg.cn/large/006nOlwNgy1fktngl8rdnj3090090myp.jpg) no-repeat;');$(document).ready(function(){$('body').GalMenu({'menu':'GalDropDown'});var resource_list="https://beats0.github.io/www.mygalgame.com/Game_list/mygalgameList.json";$.getJSON(resource_list,function(data,status){if(status){for(let i=0;i<data.length;i++){$("#search-item").append("<li><a href='"+data[i].git_url+"'target=\"_blank\">"+data[i].title+"</a></li>")}}else{console.log("400: Invalid request"+status)}});$('#search-highlight').hideseek({highlight:true});setTimeout(function(){$(".aplayer-list").addClass("aplayer-list-hide").children().css("text-align","left")},3000);$('.hero__scroll').on('click',function(e){$('html, body').animate({scrollTop:$(window).height()},1200)})});</script>
+<script>console.log('%c       ', 'font-size: 150px; background: url(https://wx1.sinaimg.cn/large/006nOlwNgy1fktngl8rdnj3090090myp.jpg) no-repeat;');$(document).ready(function(){$('body').GalMenu({'menu':'GalDropDown'});var resource_list="https://beats0.github.io/www.mygalgame.com/Game_list/mygalgameList.json";$.getJSON(resource_list,function(data,status){if(status){for(let i=0;i<data.length;i++){$("#search-item").append("<li><a href='"+data[i].git_url+"'target=\"_blank\">"+data[i].title+"</a></li>")}}else{console.log("400: Invalid request"+status)}});$('#search-highlight').hideseek({highlight:true});setTimeout(function(){$(".aplayer-list").addClass("aplayer-list-hide").children().css("text-align","left")},3000);$('.hero__scroll').on('click',function(e){$('html, body').animate({scrollTop:$(window).height()},1200)})});</script>
 <script>var _hmt = _hmt || []; (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?03707b9d88054c7fe2eb2f69bc297935"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s)})();</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108088946-1"></script><script>window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-108088946-1');</script>
 </body>
