--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                             theme: '#ff69b4',
                                             order: 'random',
                                             listFolded:true,
-                                            audio: JSON.parse(list)
+                                            audio: list
                                         })
                                     }
                                 })
